added resume to applicant page

--- a/views/applicant.ejs
+++ b/views/applicant.ejs
@@ -3,10 +3,10 @@
     <head>
         <title>Recruiting App</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-        <link rel="stylesheet" href="css/site.css">
-
+        <link rel="stylesheet" href="../css/site.css">
     </head>
     <body>
-        <h2>ID: <%= id %></h2>
+        <h2><%=firstName + " " + lastName%></h2>
+        <img src="../resumeFiles/<%=resume%>" alt="rubbish">
     </body>
 </html>
