--- a/views/applicantlist.ejs
+++ b/views/applicantlist.ejs
@@ -13,7 +13,7 @@
                     <% for(var i = 0;i < applicantList.length; i++){ %>
                     <div class="col-md-4">
                         <div class="card" style="width: 18rem;">
-                            <img class="card-img-top" src="img/profile-placeholder.jpg" alt="Card image cap">
+                            <img class="card-img-top" src="img/<%=applicantList[i].profilePicture%>" alt="Card image cap">
                             <div class="card-body">
                             <h5 class="card-title"><%= applicantList[i].firstName + " " + applicantList[i].lastName%></h5>
                             <a href="/list/<%= applicantList[i].id %>" class="btn btn-primary">View</a>
