added filter functionality

--- a/views/applicant.ejs
+++ b/views/applicant.ejs
@@ -7,6 +7,6 @@
     </head>
     <body>
         <h2><%=firstName + " " + lastName%></h2>
-        <img src="../resumeFiles/<%=resume%>" alt="rubbish">
+        <img src="../resumes/<%=resume%>" alt="rubbish">
     </body>
 </html>
