--- a/views/applicantlist.ejs
+++ b/views/applicantlist.ejs
@@ -9,6 +9,42 @@
         <div class="text-center">
             <h1>List of Applicants</h1>
             <div class="container">
+                <form action="/filteredlist" method="POST" enctype="multipart/form-data">
+                    <div class="form-row">
+                        <div class="col-sm">
+                            <label for="filterRole">Role</label>
+                            <select class="form-control" id="filterRole" name="filterRole">
+                                <option>All</option>
+                                <option>Software Developer</option>
+                                <option>Scrum Master</option>
+                                <option>Product Owner</option>
+                            </select>
+                        </div>
+                        <div class="col-sm">
+                            <label for="filterLocation">Location</label>
+                            <select class="form-control" id="filterLocation" name="filterLocation">
+                                <option>All</option>
+                                <option>San Francisco</option>
+                                <option>Sacramento</option>
+                                <option>San Diego</option>
+                                <option>Omaha</option>
+                                <option>Denver</option>
+                            </select>
+                        </div>
+                        <div class="col-sm">
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" id="filterStarred" name="filterStarred" value="true"> 
+                                <label class="form-check-label" for="gridCheck">
+                                    Starred?
+                                </label>
+                            </div>
+                        </div>
+                        <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                    </div>
+                </form>
+            </div>
+
+            <div class="container">
                 <div class="row">
                     <% for(var i = 0;i < applicantList.length; i++){ %>
                     <div class="col-md-4">
