--- a/views/form.ejs
+++ b/views/form.ejs
@@ -4,72 +4,84 @@
         <title>Recruiting App</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/site.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
-    <body>
-        <div class="jumbotron">
-            <div class="container">
-                <form action="/addApplicant" method="POST" enctype="multipart/form-data">
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name">
-                        </div>
-                        <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name">
-                        </div>
+    <body class="custom-background">
+    <div class="container top-padding">
+        <div class="jumbotron white">
+            <h2 class="text-center">Please enter your information</h2>
+            <form action="/addApplicant" method="POST" enctype="multipart/form-data">
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <input type="text" class="form-control" id="firstName" name="firstName" placeholder="First Name">
                     </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <input type="email" class="form-control" id="email" name="email" placeholder="Email">
-                        </div>
-                        <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="phone" name="phone" placeholder="Phone Number">
-                        </div>
+                    <div class="form-group col-md-6">
+                        <input type="text" class="form-control" id="lastName" name="lastName" placeholder="Last Name">
                     </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <select class="form-control" id="location" name="location"> 
-                                <option>Location</option>
-                                <option>San Francisco</option>
-                                <option>Sacramento</option>
-                                <option>San Diego</option>
-                                <option>Omaha</option>
-                                <option>Denver</option>
-                            </select>
-                        </div>
-                        <div class="form-group col-md-6">
-                            <select class="form-control" id="role" name="role">
-                                <option>Role You Are Applying For</option>
-                                <option>Software Developer</option>
-                                <option>Scrum Master</option>
-                                <option>Product Owner</option>
-                            </select>
-                        </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <input type="email" class="form-control" id="email" name="email" placeholder="Email">
                     </div>
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="previousCompany" name="previousCompany" placeholder="Previous Company">
-                        </div>
-                        <div class="form-group col-md-6">
-                            <input type="text" class="form-control" id="yearsExperience" name="yearsExperience" placeholder="Years of Experience (Total)">
-                        </div>
+                    <div class="form-group col-md-6">
+                        <input type="text" class="form-control" id="phone" name="phone" placeholder="Phone Number">
                     </div>
-                    <div class="form-row">
-                        <div class="custom-file col-md-6">
-                            <input type="file" class="custom-file-input" id="profilePicture" name="profilePicture">
-                            <label class="custom-file-label" for="profilePicture">Add Profile Picture</label>
-                        </div>
-                        <div class="custom-file col-md-6">
-                            <input type="file" class="custom-file-input" id="resume" name="resume">
-                            <label class="custom-file-label" for="resume">Add Resume</label>
-                        </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <select class="form-control" id="role" name="role">
+                            <option>Role You Are Applying For</option>
+                            <option>Software Developer</option>
+                            <option>Scrum Master</option>
+                            <option>Product Owner</option>
+                        </select>
                     </div>
-                    <div class="form-row">
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" id="starred" name="starred" value="true">
+                    <div class="form-group col-md-6">
+                        <select class="form-control" id="location" name="location"> 
+                            <option>Location</option>
+                            <option>San Francisco</option>
+                            <option>Sacramento</option>
+                            <option>San Diego</option>
+                            <option>Omaha</option>
+                            <option>Denver</option>
+                        </select>
                     </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-            </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <input type="text" class="form-control" id="previousCompany" name="previousCompany" placeholder="Previous Company">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <input type="text" class="form-control" id="yearsExperience" name="yearsExperience" placeholder="Years of Experience (Total)">
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="custom-file col-md-5">
+                        <input type="file" class="custom-file-input" id="profilePicture" name="profilePicture">
+                        <label class="custom-file-label" for="profilePicture">Add Profile Picture</label>
+                    </div>
+                    <div class="custom-file col-md-5">
+                        <input type="file" class="custom-file-input" id="resume" name="resume">
+                        <label class="custom-file-label" for="resume">Add Resume</label>
+                    </div>
+                    <button type="button" class="btn btn-default btn-lg left-space btn-outline-dark" data-toggle="button" aria-pressed="false" autocomplete="off" id="starred" name="starred" value="true">
+                        <i class="fa fa-star"></i>
+                    </button>
+                </div>
+                <div class="form-row">
+                    <div class="col text-center top-space">
+                        <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+                    </div>
+                </div>
+            </form>
         </div>
+    </div>
     </body>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script>
+        $('.btn').click(function(e) {
+            e.preventDefault();
+            $(this).addClass('active');
+        })
+    </script>
 </html>
