--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,9 @@
         <link rel="stylesheet" href="css/site.css">
 
     </head>
-    <body>
-        <div class="container vertical-center">
-            <div class="jumbotron text-center">
+    <body class="custom-background">
+        <div class="container align-items-center top-padding">
+            <div class="jumbotron text-center shadow-lg white">
                 <h1 class="display-3">BHHC Recruitment App</h1>
                 <a class="btn btn-primary btn-lg" href="new" role="button">Add New Applicant</a>
                 <a class="btn btn-primary btn-lg" href="list" role="button">View Applicants</a>
