--- a/public/css/site.css
+++ b/public/css/site.css
@@ -18,6 +18,10 @@
     margin-left: 2%;
 }
 
+.bottom-space {
+    margin-bottom: 10%;
+}
+
 .white{
     background-color: white;
 }
@@ -30,4 +34,27 @@
 .btn:hover {
     background-color: RoyalBlue;
   }
+
+.card-image {
+    width: 100%;
+    height: 15vw;
+    object-fit: cover;
+}
+
+.fit-image {
+    width: 100%;
+    object-fit: cover;
+}
+
+.profile-picture {
+    height: 15vw;
+    width: auto;
+}
+
+.center-text {
+    align-items: center;
+    text-align: center;
+}
+
+
 
