--- a/views/applicant.ejs
+++ b/views/applicant.ejs
@@ -6,7 +6,46 @@
         <link rel="stylesheet" href="../css/site.css">
     </head>
     <body>
-        <h2><%=firstName + " " + lastName%></h2>
-        <img src="../resumes/<%=resume%>" alt="rubbish">
+    <div class="">
+        <div class="row align-items-center">
+            <div class="col">
+                <div class="jumbotron center-text">
+                    <img class="fit-image profile-picture" src="../img/<%=profilePicture%>" alt="rubbish">
+                    <div class="row">
+                        <div class="col">
+                            <h1><%=firstName + " " + lastName%></h1>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <h3><span>Email: </span><span class="text-primary"><%=email%></span></h3>
+                        </div>
+                        <div class="col">
+                            <h3><span>Phone Number: </span><span class="text-primary"><%=phone%></span></h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <h3><span>Applying For: </span><span class="text-primary"><%=role%></span></h3>
+                        </div>
+                        <div class="col">
+                            <h3><span>Desired Location: </span><span class="text-primary"><%=location%></span></h3>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <h3><span>Previous Company: </span><span class="text-primary"><%=previousCompany%></span></h3>
+                        </div>
+                        <div class="col">
+                            <h3><span>Total years experience: </span><span class="text-primary"><%=yearsExperience%></span></h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col">
+                <img class="fit-image" src="../resumes/<%=resume%>" alt="rubbish">
+            </div>
+        </div>
+    </div>
     </body>
 </html>
