updated applicant page and fixed starred function

--- a/views/applicant.ejs
+++ b/views/applicant.ejs
@@ -4,6 +4,7 @@
         <title>Recruiting App</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
         <link rel="stylesheet" href="../css/site.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
     <div class="">
@@ -13,7 +14,7 @@
                     <img class="fit-image profile-picture" src="../img/<%=profilePicture%>" alt="rubbish">
                     <div class="row">
                         <div class="col">
-                            <h1><%=firstName + " " + lastName%></h1>
+                            <h1><%=firstName + " " + lastName%> <% if( locals.starred == true) { %> <i class="fa fa-star"></i> <% } %> </h1> 
                         </div>
                     </div>
                     <div class="row">
