updated easter egg

--- a/views/applicant.ejs
+++ b/views/applicant.ejs
@@ -44,7 +44,7 @@
                 </div>
             </div>
             <div class="col">
-                <img class="fit-image" src="../resumes/<%=resume%>" alt="rubbish">
+                <img class="fit-image" src="../resumes/<%=resume%>" alt="Marilyn stole this image">
             </div>
         </div>
     </div>
